trunk/Archive2/c4/3ee61caf6df9e6/output
main.cpp: In function 'void menu()':
main.cpp:65:10: error: no matching function for call to 'addp()'
     addp();
          ^
main.cpp:65:10: note: candidate is:
main.cpp:24:6: note: template<class It> void addp()
 void addp();
      ^
main.cpp:24:6: note:   template argument deduction/substitution failed:
main.cpp:65:10: note:   couldn't deduce template parameter 'It'
     addp();
          ^
main.cpp: In function 'void addp()':
main.cpp:103:11: error: 'arr' was not declared in this scope
  s = safe(arr.begin(), arr.end());
           ^
main.cpp: In function 'void game()':
main.cpp:157:23: error: 'std::empty' is not a class member
     if (Abbo[i1].name.std::empty() == 0 || Abbo[i2].std::empty() == 0){
                       ^
main.cpp:157:53: error: 'std::empty' is not a class member
     if (Abbo[i1].name.std::empty() == 0 || Abbo[i2].std::empty() == 0){
                                                     ^
main.cpp: In function 'int writetostruct(It, It)':
main.cpp:198:32: error: no matching function for call to 'std::basic_fstream<char>::getline(std::string&, int)'
   in.getline( Abbo[i].name, 20 ).ignore( std::numeric_limits< std::streamsize >::max(), '\n' ); 
                                ^
main.cpp:198:32: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:618:5: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::getline(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
     basic_istream<char>::
     ^
/usr/include/c++/4.8/istream:618:5: note:   candidate expects 3 arguments, 2 provided
/usr/include/c++/4.8/istream:427:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::getline(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       getline(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:427:7: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'std::basic_istream<char>::char_type* {aka char*}'
main.cpp:199:35: error: no matching function for call to 'std::basic_fstream<char>::getline(std::string&, int)'
   in.getline( Abbo[i].surname, 20 ).ignore( std::numeric_limits< std::streamsize >::max(), '\n' );
                                   ^
main.cpp:199:35: note: candidates are:
In file included from /usr/include/c++/4.8/iostream:40:0,
                 from main.cpp:1:
/usr/include/c++/4.8/istream:618:5: note: std::basic_istream<_CharT, _Traits>& std::basic_istream<_CharT, _Traits>::getline(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize, std::basic_istream<_CharT, _Traits>::char_type) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
     basic_istream<char>::
     ^
/usr/include/c++/4.8/istream:618:5: note:   candidate expects 3 arguments, 2 provided
/usr/include/c++/4.8/istream:427:7: note: std::basic_istream<_CharT, _Traits>::__istream_type& std::basic_istream<_CharT, _Traits>::getline(std::basic_istream<_CharT, _Traits>::char_type*, std::streamsize) [with _CharT = char; _Traits = std::char_traits<char>; std::basic_istream<_CharT, _Traits>::__istream_type = std::basic_istream<char>; std::basic_istream<_CharT, _Traits>::char_type = char; std::streamsize = long int]
       getline(char_type* __s, streamsize __n)
       ^
/usr/include/c++/4.8/istream:427:7: note:   no known conversion for argument 1 from 'std::string {aka std::basic_string<char>}' to 'std::basic_istream<char>::char_type* {aka char*}'
